[wip] Dockerfileのwsgiでのコンテナ構築を削除、インストールライブラリのバージョンを明確化

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -9,9 +9,9 @@ FROM python:3.9-slim AS base
 ARG PSYCOPG_VERSION=3.1.8
 ARG DJANGO_VERSION=4.2
 ARG DJANGO_REST_VERSION=3.15.2
-ARG GUNICORN_VERSION=23.0.0
-## misc
-
+ARG CHANNELS_VERSION=4.2.0
+ARG DAPHNE_VERSION=4.1.2
+ARG CHANNELS_REDIS_VERSION=4.2.1
 
 # コンテナ起動後にも利用する環境変数(secretは.envへ)
 ENV DJANGO_PROJECT_NAME trans
@@ -40,14 +40,14 @@ RUN apt-get -y install \
 # clean up to reduce the size of the image
 RUN rm -rf /var/lib/apt/lists/*
 
-# Djangoとpsycopg(postgreSQL操作に必要)のインストール
-## https://docs.djangoproject.com/ja/5.0/ref/databases/#postgresql-notes
-## https://docs.djangoproject.com/ja/5.0/faq/install/
+# APIサーバーおよび接続されたコンテナの操作に必要なライブラリのインストール
 RUN pip install --upgrade pip
 RUN pip install --no-cache-dir psycopg==${PSYCOPG_VERSION}
 RUN pip install --no-cache-dir Django==${DJANGO_VERSION}
 RUN pip install --no-cache-dir djangorestframework==${DJANGO_REST_VERSION}
-RUN pip install --no-cache-dir gunicorn==${GUNICORN_VERSION}
+RUN pip install --no-cache-dir channels==${CHANNELS_VERSION}
+RUN pip install --no-cache-dir daphne==${DAPHNE_VERSION}
+RUN pip install --no-cache-dir channels-redis==${CHANNELS_REDIS_VERSION}
 
 # Create a Django project
 RUN django-admin startproject ${DJANGO_PROJECT_NAME}
@@ -75,64 +75,22 @@ RUN python ${DJANGO_PROJECT_DIR}manage.py makemigrations
 COPY tool/entrypoint.sh ${DJANGO_PROJECT_DIR}
 RUN chmod +x ${DJANGO_PROJECT_DIR}entrypoint.sh
 
-############################
-# development common stage #
-############################
-FROM base AS development_common
-
-# dev用の制限が緩いsettings.pyをコピー
-COPY dev/settings.py ${DJANGO_PROJECT_DIR}${DJANGO_PROJECT_NAME}/
-
-# コンテナ内で"test"コマンドを実行すると、Djangoのtestが実行できるようにaliasを設定
-RUN echo "alias test='python manage.py test'" >> ~/.bashrc
-
-
-##################################
-# development_djangoserver stage #
-##################################
-FROM development_common AS development_djangoserver
-
-# コンテナ内で"run"コマンドを実行すると、Djangoの開発サーバーが起動するようにaliasを設定
-RUN echo "alias run='python manage.py runserver ${BIND_ADDRESS}:${BIND_PORT}'" >> ~/.bashrc
-
-ENTRYPOINT [ "/trans/entrypoint.sh" ]
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
-
-##########################
-# development_wsgi stage #
-##########################
-FROM development_common AS development_wsgi
-
-# コンテナ内で"run"コマンドを実行すると、Gunicornが起動するようにaliasを設定
-RUN echo "alias run='gunicorn ${DJANGO_PROJECT_NAME}.wsgi:application --bind ${BIND_ADDRESS}:${BIND_PORT}'" >> ~/.bashrc
-
-ENTRYPOINT [ "/trans/entrypoint.sh" ]
-CMD ["sleep", "infinity"]
 
 ##########################
 # development_asgi stage #
 ##########################
-FROM development_common AS development_asgi
+FROM base AS development_asgi
 
-# WS通信と一時メモリに必要なパッケージをインストール
-RUN pip install --no-cache-dir 'channels[daphne]'
-RUN pip install --no-cache-dir 'channels-redis'
-
+# dev用の制限が緩いsettings.pyをコピー
+COPY dev/settings.py ${DJANGO_PROJECT_DIR}${DJANGO_PROJECT_NAME}/
+# コンテナ内で"test"コマンドを実行すると、Djangoのtestが実行できるようにaliasを設定
+RUN echo "alias test='python manage.py test'" >> ~/.bashrc
 # コンテナ内で"run"コマンドを実行すると、Djangoの開発サーバーが起動するようにaliasを設定
 RUN echo "alias run='python manage.py runserver ${BIND_ADDRESS}:${BIND_PORT}'" >> ~/.bashrc
 
 ENTRYPOINT [ "/trans/entrypoint.sh" ]
-# コンテナに入ってからbashに切り替え手動でrunする。（簡単なコード変更のたびに再ビルドせず、コンテナ内でrunを繰り返せばOK）
+# コンテナに入ってからbashに切り替え手動でrunする。
 CMD ["sleep", "infinity"]
-# CMD ["bash", "-c", "source ~/.bashrc && run"]
-
-#########################
-# deploy_wsgi stage #
-#########################
-FROM base AS deploy_wsgi
-
-ENTRYPOINT [ "/trans/entrypoint.sh" ]
-CMD [ "sh", "-c", "gunicorn ${DJANGO_PROJECT_NAME}.wsgi:application --bind ${BIND_ADDRESS}:${BIND_PORT}" ]
 
 
 #########################
