バック（パドル位置の受け取り、ボール位置の計算、パドルor壁orゴールとの接触判定、CLI） Fixes #126

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -97,3 +97,6 @@ CMD ["sleep", "infinity"]
 # deploy_asgi stage #
 #########################
 FROM base AS deploy_asgi
+
+ENTRYPOINT [ "/trans/entrypoint.sh" ]
+CMD ["daphne", "-b", "${BIND_ADDRESS}", "-p", "${BIND_PORT}", "${DJANGO_PROJECT_NAME}.asgi:application"]
