バック（パドル位置の受け取り、ボール位置の計算、パドルor壁orゴールとの接触判定、CLI） (#155)
* [wip] 開発の環境セッティング。channels/daphneをインストールしてapi/adminが表示できるだけの事前準備をした。

* [wip]開発環境のセッティング。redisをChannelsのバックエンドに設定（runserverにエラーはないが実際コードで使えるか不明）

* [wip]開発環境のセッティング。ws通信デモをしてみたら設定ミスがあったので修正。

* [wip]完全な遊びコード。wscatで通信できるか確認しただけ

* [wip] local/match/へのGETリクエストでプレイヤー名のみレスポンスに変更

* [wip] openAPI.yamlにあわせたキー値の変更

* [wip]Update functions name. Delete unused functions.

* [wip] add function get_tournament_id_from_scope

* [wip] ボールの動作、パドルの設定など。未（トーナメント、Redis利用、Simpleのプレイヤー名レスポンス）

* [wip]動作確認済み。miscな変更

* [wip] GameManagerがシンプル、トーナメントの両方で使えるように、ScoreManagerを導入

* [wip] トーナメントも動いたと思う

* [wip] 簡単なフロントを作成した

* [wip]パドルのY方向への加算が間違っていたので反転

* [wip] 上下の壁でボールが転がっていたのを修正（radianの反転ロジックが壁の外側という条件だけだったので永遠に反転していた）

* [wip] update README

* [wip] Consumers関数の共通部分を基底クラスとして分離した

* [wip] 関数名を明解にした

* [wip] Redisデータの削除ロジックを実装

* [wip] 不要になった関数の削除

* [wip] Dockerfileのwsgiでのコンテナ構築を削除、インストールライブラリのバージョンを明確化

* バック（パドル位置の受け取り、ボール位置の計算、パドルor壁orゴールとの接触判定、CLI）
Fixes #126

* Merge branch 'main' into jizots/issue126

* refix: ターゲットをdeployにしたら動かなくなったのでちょこちょこ修正
Fixes #126

* Merge remote-tracking branch 'origin/main' into jizots/issue126

* refactor: move package versions to requirements.txt for better management

* remove WSGI_APPLICATION setting from project settings

* fix: correct paddle dimension variable name from WIDTH to HEIGHT

* refactor: rename match view classes for clarity

* refactor: rename local match view classes for consistency

* fix: update paddle dimension variable names from WIDTH to HEIGHT for consistency

* fix: update get method signature in LocalSimpleMatchView for improved request handling: DjangoRESTの規則違反でエラーになっていた

* fix: update WebSocket routes for local match consumers to improve clarity related to AsyncAPIの修正 #151

* refactor: update tournament-related methods to use class methods for better encapsulation and clarity

* refactor: implement class methods for Match and MatchDetail to improve data handling and encaps

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -4,15 +4,6 @@
 # 軽そうなbaseイメージを選択(https://hub.docker.com/_/python)
 FROM python:3.9-slim AS base
 
-# ビルド時のみ利用する変数
-## version of installed packages
-ARG PSYCOPG_VERSION=3.1.8
-ARG DJANGO_VERSION=4.2
-ARG DJANGO_REST_VERSION=3.15.2
-ARG GUNICORN_VERSION=23.0.0
-## misc
-
-
 # コンテナ起動後にも利用する環境変数(secretは.envへ)
 ENV DJANGO_PROJECT_NAME trans
 ENV DJANGO_PROJECT_DIR /${DJANGO_PROJECT_NAME}/
@@ -21,6 +12,7 @@ RUN export SECRET_KEY=$(python -c 'from django.core.management.utils import get_
 ENV SECRET_KEY=$SECRET_KEY
 ENV BIND_ADDRESS 0.0.0.0
 ENV BIND_PORT 8000
+ENV DJANGO_SETTINGS_MODULE=trans.settings
 
 # install for deploy
 RUN apt-get update
@@ -40,14 +32,10 @@ RUN apt-get -y install \
 # clean up to reduce the size of the image
 RUN rm -rf /var/lib/apt/lists/*
 
-# Djangoとpsycopg(postgreSQL操作に必要)のインストール
-## https://docs.djangoproject.com/ja/5.0/ref/databases/#postgresql-notes
-## https://docs.djangoproject.com/ja/5.0/faq/install/
+# APIサーバーおよび接続されたコンテナの操作に必要なライブラリのインストール
 RUN pip install --upgrade pip
-RUN pip install --no-cache-dir psycopg==${PSYCOPG_VERSION}
-RUN pip install --no-cache-dir Django==${DJANGO_VERSION}
-RUN pip install --no-cache-dir djangorestframework==${DJANGO_REST_VERSION}
-RUN pip install --no-cache-dir gunicorn==${GUNICORN_VERSION}
+COPY tool/requirements.txt tool/requirements.txt
+RUN pip install --no-cache-dir -r tool/requirements.txt
 
 # Create a Django project
 RUN django-admin startproject ${DJANGO_PROJECT_NAME}
@@ -75,56 +63,28 @@ RUN python ${DJANGO_PROJECT_DIR}manage.py makemigrations
 COPY tool/entrypoint.sh ${DJANGO_PROJECT_DIR}
 RUN chmod +x ${DJANGO_PROJECT_DIR}entrypoint.sh
 
-############################
-# development common stage #
-############################
-FROM base AS development_common
-
-# dev用の制限が緩いsettings.pyをコピー
-COPY dev/settings.py ${DJANGO_PROJECT_DIR}${DJANGO_PROJECT_NAME}/
-
-# コンテナ内で"test"コマンドを実行すると、Djangoのtestが実行できるようにaliasを設定
-RUN echo "alias test='python manage.py test'" >> ~/.bashrc
-
-
-##################################
-# development_djangoserver stage #
-##################################
-FROM development_common AS development_djangoserver
-
-# コンテナ内で"run"コマンドを実行すると、Djangoの開発サーバーが起動するようにaliasを設定
-RUN echo "alias run='python manage.py runserver ${BIND_ADDRESS}:${BIND_PORT}'" >> ~/.bashrc
-
-ENTRYPOINT [ "/trans/entrypoint.sh" ]
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
-
-##########################
-# development_wsgi stage #
-##########################
-FROM development_common AS development_wsgi
-
-# コンテナ内で"run"コマンドを実行すると、Gunicornが起動するようにaliasを設定
-RUN echo "alias run='gunicorn ${DJANGO_PROJECT_NAME}.wsgi:application --bind ${BIND_ADDRESS}:${BIND_PORT}'" >> ~/.bashrc
-
-ENTRYPOINT [ "/trans/entrypoint.sh" ]
-CMD ["sleep", "infinity"]
 
 ##########################
 # development_asgi stage #
 ##########################
-FROM development_common AS development_asgi
+FROM base AS development_asgi
 
-
-#########################
-# deploy_wsgi stage #
-#########################
-FROM base AS deploy_wsgi
+# dev用の制限が緩いsettings.pyをコピー
+COPY dev/settings.py ${DJANGO_PROJECT_DIR}${DJANGO_PROJECT_NAME}/
+# コンテナ内で"test"コマンドを実行すると、Djangoのtestが実行できるようにaliasを設定
+RUN echo "alias test='python manage.py test'" >> ~/.bashrc
+# コンテナ内で"run"コマンドを実行すると、Djangoの開発サーバーが起動するようにaliasを設定
+RUN echo "alias run='python manage.py runserver ${BIND_ADDRESS}:${BIND_PORT}'" >> ~/.bashrc
 
 ENTRYPOINT [ "/trans/entrypoint.sh" ]
-CMD [ "sh", "-c", "gunicorn ${DJANGO_PROJECT_NAME}.wsgi:application --bind ${BIND_ADDRESS}:${BIND_PORT}" ]
+# コンテナに入ってからbashに切り替え手動でrunする。
+CMD ["sleep", "infinity"]
 
 
 #########################
 # deploy_asgi stage #
 #########################
 FROM base AS deploy_asgi
+
+ENTRYPOINT [ "/trans/entrypoint.sh" ]
+CMD ["sh", "-c", "daphne -b ${BIND_ADDRESS} -p ${BIND_PORT} ${DJANGO_PROJECT_NAME}.asgi:application"]
