--- a/api/dev/docker-compose.yml
+++ b/api/dev/docker-compose.yml
@@ -1,11 +1,11 @@
-# Djangoの開発用。グローバルdocker-compose.ymlができたら削除する
+# Djangoの開発環境用
 services:
   # バックエンドのサービス
-  backend:
+  api:
     build:
       context: ../
       dockerfile: ./Dockerfile
-      target: development_djangoserver # 開発用のDockerfileのターゲット
+      target: deploy_asgi # 開発用のDockerfileのターゲット
     ports:
       - "8000:8000"
     networks:
@@ -20,7 +20,9 @@ services:
     depends_on:
       rdbms:
         condition: service_healthy
-
+      in_memory_db:
+        condition: service_healthy
+    container_name: "dev-api"
 
   rdbms:
     image: postgres:latest
@@ -36,6 +38,17 @@ services:
       test: ["CMD-SHELL", "pg_isready -U pong_user"]
       interval: 15s
       retries: 5
+    container_name: "dev-rdbms"
+
+  in_memory_db:
+    image: redis:latest
+    networks:
+      - pong_network
+    healthcheck:
+      test: ["CMD-SHELL", "redis-cli ping"]
+      interval: 15s
+      retries: 5
+    container_name: "dev-redis"
 
 volumes:
   postgres_data:
