fix: makeできるように apiのtargetを変更

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -60,7 +60,7 @@ services:
   api:
     build:
       context: api/
-      target: development_djangoserver
+      target: deploy_asgi
     container_name: "api"
     restart: on-failure
     networks:
