ssp(server side pong) front (#152)
* fix: ballPositionをサーバーから送られてきた地点に変更する

* del: 不要なものの削除

* fix: モックサーバーの値の変更

* feat: key入力をwsで送る

* del: unused comment

* refactor: 変数名などの修正

* fix: エラー処理の追加とリファクタリング

* format

* fix: テスト・本番適応

* fix 開発用に変更

* update: apiの変更に伴い変更

* format

* fix: 開発環境

* rename: PADDLE_HEIGHT, PADDLE_WIDTH

* fix: makeできるように apiのtargetを変更

ユーザー登録関連の実装

signup -> registerに変更

signup, login, logout, password-resetの導線を作成　エラハンほぼなし

fix: linter

大文字に揃える

signupページにログインページへのリンクを追加

model定義に合わせる

labelの用法修正

matchedRoute

コメント追記

いらない関数消去

api.ymlの仕様書に合わせてbackとfrontを実装

authorizationをヘッダーに追加

fix: getのheaderにトークンを入れる

chore: レビュー修正

Logoutをリンクだけにする

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -45,12 +45,14 @@ WORKDIR ${DJANGO_PROJECT_DIR}
 RUN python manage.py startapp player
 RUN python manage.py startapp tournament
 RUN python manage.py startapp match
+RUN python manage.py startapp user
 
 # project, appsのファイルをコピー
 COPY conf/project/* ${DJANGO_PROJECT_DIR}${DJANGO_PROJECT_NAME}/
 COPY conf/app_player/* ${DJANGO_PROJECT_DIR}player/
 COPY conf/app_tournament/* ${DJANGO_PROJECT_DIR}tournament/
 COPY conf/app_match/* ${DJANGO_PROJECT_DIR}match/
+COPY conf/app_user/* ${DJANGO_PROJECT_DIR}user/
 
 # Create utils Directory and Copy files
 RUN mkdir -p ${DJANGO_PROJECT_DIR}utils
