--- a/static-builder/biome.json
+++ b/static-builder/biome.json
@@ -10,7 +10,10 @@
   "linter": {
     "enabled": true,
     "rules": {
-      "all": true
+      "all": true,
+      "suspicious": {
+        "noEmptyBlockStatements": "off"
+      }
     }
   },
   "formatter": {
