--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -15,6 +15,8 @@ services:
       timeout: 5s
       retries: 5
       start_period: 120s
+    ports:
+      - "5432:5432"
     networks:
       - net_pong
 
