--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,7 +68,7 @@ services:
       rdbms:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "curl", "-H", "Host: reverseproxy", "http://localhost:8000"]
+      test: ["CMD", "curl", "-H", "Host: reverseproxy", "http://localhost:8000/health/"]
       interval: 5s
       retries: 5
 
