fix: docker-composeのコメント修正、ALLOWED_HOSTSの設定を元に戻し、無駄なconsole.logを削除

--- a/api/dev/docker-compose.yml
+++ b/api/dev/docker-compose.yml
@@ -1,6 +1,6 @@
 # Djangoの開発環境用
 services:
-  # バックエンドのサービス/Users/kaaaaakun_/Desktop/42tokyo/ft_transcendence/api/dev/index.html
+  # バックエンドのサービス
   api:
     build:
       context: ../
