fix: Redisのサービス名をin_memory_dbに変更し、nginx設定を更新

--- a/reverseproxy/nginx.conf
+++ b/reverseproxy/nginx.conf
@@ -19,6 +19,11 @@ http {
         server api:8000;
     }
 
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        ''      close;
+    }
+
     server {
         listen 443 ssl;
         ssl_certificate /etc/ssl/ca-certificates.crt;
@@ -40,6 +45,8 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_buffering off; #リアルタイム性を重視するためbufの中止
             proxy_ignore_client_abort on; #切断対策
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
         }
 
         location ~ /\.$ {
