--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -85,7 +85,7 @@ services:
     depends_on:
       rdbms:
         condition: service_healthy
-      redis:
+      in_memory_db:
         condition: service_healthy
     healthcheck:
       test: ["CMD", "curl", "-H", "Host: reverseproxy", "http://localhost:8000"]
@@ -93,8 +93,8 @@ services:
       retries: 5
       start_period: 120s
 
-  redis:
-    container_name: "redis"
+  in_memory_db:
+    container_name: "in_memory_db"
     image: redis:latest
     networks:
       - net_pong
