--- a/reverseproxy/nginx.local.conf
+++ b/reverseproxy/nginx.local.conf
@@ -39,16 +39,10 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_buffering off; #リアルタイム性を重視するためbufの中止
+            proxy_ignore_client_abort on; #切断対策
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
-            proxy_buffering off;
-            proxy_ignore_client_abort on;
-            proxy_read_timeout 600s;
-            proxy_send_timeout 600s;
         }
-
-        error_log /var/log/nginx/error.log debug;
-        access_log /var/log/nginx/access.log;
     }
 }
-
