--- a/static-builder/Dockerfile
+++ b/static-builder/Dockerfile
@@ -6,7 +6,6 @@ WORKDIR /usr/src/vite
 RUN apk update && apk add --no-cache curl bash libc6-compat
 RUN corepack enable && corepack prepare pnpm@9.7.0 --activate
 
-
 # development stage
 FROM base AS development
 
@@ -25,6 +24,6 @@ WORKDIR /usr/src/vite
 COPY ./ ./
 
 RUN --mount=type=cache,target=/root/.pnpm-store \
-    pnpm install --frozen-lockfile
+    pnpm install #--frozen-lockfile
 
 RUN pnpm build
