--- a/reverseproxy/nginx.local.conf
+++ b/reverseproxy/nginx.local.conf
@@ -43,6 +43,8 @@ http {
             proxy_ignore_client_abort on; #切断対策
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
+            proxy_read_timeout 600s;
+            proxy_send_timeout 600s;
         }
     }
 }
