--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -78,7 +78,7 @@ services:
       rdbms:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "curl", "-H", "Host: reverseproxy", "http://localhost:8000"]
+      test: ["CMD", "curl", "-H", "Host: reverseproxy", "http://localhost:8000/health/"]
       interval: 5s
       retries: 5
       start_period: 120s
