fix: prodでも動くように - https/wssにも対応(.env.sampleを変更すればOK)

--- a/.env.sample
+++ b/.env.sample
@@ -7,6 +7,7 @@ DJANGO_SUPERUSER_EMAIL=admin@example.com
 DJANGO_SUPERUSER_PASSWORD=pass
 
 VITE_API_URL=http://localhost
+WEBSOKET_URL=ws://localhost
 
 ###############
 # RDBMS SETUP #
