--- a/static-builder/Dockerfile
+++ b/static-builder/Dockerfile
@@ -17,7 +17,8 @@ COPY package.json pnpm-lock.yaml ./
 # build stage
 FROM base AS build
 
-ARG VITE_API_URL
+ARG VITE_API_URL 
+ARG WEBSOKET_URL
 
 WORKDIR /usr/src/vite
 
