--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -34,6 +34,7 @@ services:
     restart: on-failure
     environment:
       - VITE_API_URL
+      - WEBSOKET_URL
     volumes:
       - ./static-builder:/usr/src/vite
     networks:
