--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -33,8 +33,7 @@ services:
     networks:
       - net_pong
     healthcheck:
-      test: ["CMD", "curl", "-I", "http://localhost:5173/"]
-      interval: 10s
+      test: ["CMD", "curl", "-I", "http://localhost:5173/"] interval: 10s
       timeout: 5s
       retries: 5
       start_period: 120s
@@ -82,6 +81,61 @@ services:
       interval: 5s
       retries: 5
       start_period: 120s
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.15.2
+    container_name: "elasticsearch"
+    environment:
+      discovery.type: single-node
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9200"]
+      interval: 30s
+      timeout: 5s
+      retries: 5
+    ports:
+      - "9200:9200"
+    networks:
+      - net_pong
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:7.15.2
+    container_name: "kibana"
+    environment:
+      ELASTICSEARCH_HOSTS: "http://elasticsearch:9200"
+    ports:
+      - "5601:5601"
+    networks:
+      - net_pong
+    depends_on:
+      elasticsearch:
+        condition: service_healthy
+
+  logstash:
+    image: docker.elastic.co/logstash/logstash:7.15.2
+    container_name: "logstash"
+    volumes:
+      - ./logstash/pipeline/:/usr/share/logstash/pipeline/
+    environment:
+      ELASTICSEARCH_HOST: "elasticsearch"
+      ELASTICSEARCH_PORT: "9200"
+    networks:
+      - net_pong
+    depends_on:
+      elasticsearch:
+        condition: service_healthy
+
+  filebeat:
+    image: docker.elastic.co/beats/filebeat:7.15.2
+    container_name: "filebeat"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+      - ./filebeat/filebeat.yml:/usr/share/filebeat/filebeat.yml
+    networks:
+      - net_pong
+    depends_on:
+      elasticsearch:
+        condition: service_healthy
 
 networks:
   net_pong:
