SSPインフラ(フロント・バックの統合) (#163)
* de: unused file

* wip: websoket/redisの接続はできた(中断してしまう)

* wip 一旦push

* fix: dev-redis を redis に統一, 点数を11点に

* fix: ws://localhost:80/api/ws/local-tournament-match/通信できた

* fix: docker-composeにポート設定を追加し、Pongゲームのボールとパドルのサイズを調整

* fix: 勝者判定後のスコア削除処理、試合結果の更新処理

* fix: docker-composeのコメント修正、ALLOWED_HOSTSの設定を元に戻し、無駄なconsole.logを削除

* fix: Redisのサービス名をin_memory_dbに変更し、nginx設定を更新

* fix

* fix: バグ修正

* refactor: 不要な設定を削除

* Enable frozen lockfile in Dockerfile

* Remove commented-out key event handler functions

* fix: prodでも動くように - https/wssにも対応(.env.sampleを変更すればOK)

* fix: ALLOWED_HOSTSにreverseproxyがなくワーニングが出ていたため、ホストとして追加

* fix: WEBSOKET_URLをVITE_WEBSOCKET_URLに変更し、Dockerfileとdocker-composeファイルを更新

---------

Co-authored-by: sota <hotphilly1776@yahoo.co.jp>

--- a/static-builder/Dockerfile
+++ b/static-builder/Dockerfile
@@ -6,7 +6,6 @@ WORKDIR /usr/src/vite
 RUN apk update && apk add --no-cache curl bash libc6-compat
 RUN corepack enable && corepack prepare pnpm@9.7.0 --activate
 
-
 # development stage
 FROM base AS development
 
@@ -18,7 +17,8 @@ COPY package.json pnpm-lock.yaml ./
 # build stage
 FROM base AS build
 
-ARG VITE_API_URL
+ARG VITE_API_URL 
+ARG VITE_WEBSOCKET_URL
 
 WORKDIR /usr/src/vite
 
