--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,11 @@ services:
     volumes:
       - vol_rdbms:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB} && pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB} || exit 1"]
+      test:
+        [
+          "CMD-SHELL",
+          "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB} && pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB} || exit 1",
+        ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -24,6 +28,7 @@ services:
       target: build
       args:
         - VITE_API_URL
+        - VITE_WEBSOCKET_URL
     container_name: "static-builder"
     volumes:
       - vol_static_builder:/usr/src/vite
@@ -37,7 +42,7 @@ services:
     volumes:
       - ./reverseproxy/ssl/:/etc/ssl/
       - ./reverseproxy/nginx.conf:/etc/nginx/nginx.conf
-      - vol_static_builder:/usr/share/nginx/html  # vol_static_builderをマウント
+      - vol_static_builder:/usr/share/nginx/html # vol_static_builderをマウント
     networks:
       - net_pong
     depends_on:
@@ -67,9 +72,29 @@ services:
     depends_on:
       rdbms:
         condition: service_healthy
+      in_memory_db:
+        condition: service_healthy
     healthcheck:
-      test: ["CMD", "curl", "-H", "Host: reverseproxy", "http://localhost:8000/health/"]
+      test:
+        [
+          "CMD",
+          "curl",
+          "-H",
+          "Host: reverseproxy",
+          "http://localhost:8000/health/",
+        ]
       interval: 5s
+      retries: 5
+
+  in_memory_db:
+    container_name: "in_memory_db"
+    image: redis:7.4.2
+    networks:
+      - net_pong
+    healthcheck:
+      test: ["CMD-SHELL", "redis-cli ping | grep PONG"]
+      interval: 1s
+      timeout: 3s
       retries: 5
 
 networks:
@@ -81,4 +106,3 @@ volumes:
     name: "vol_rdbms"
   vol_static_builder:
     name: "vol_static_builder"
-
