--- a/reverseproxy/nginx.local.conf
+++ b/reverseproxy/nginx.local.conf
@@ -13,6 +13,11 @@ http {
         server api:8000;
     }
 
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        ''      close;
+    }
+
     server {
         listen 80;
 
@@ -34,6 +39,8 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_buffering off; #リアルタイム性を重視するためbufの中止
             proxy_ignore_client_abort on; #切断対策
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
         }
     }
 }
