[wip]apiは共有変数の設定ができた

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,7 +55,8 @@ services:
 
   api:
     build:
-      context: api/
+      context: .
+      dockerfile: api/Dockerfile
       target: deploy_asgi
     container_name: "api"
     expose:
