--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,8 @@ services:
 
   static-builder:
     build:
-      context: static-builder/
+      context: .
+      dockerfile: static-builder/Dockerfile
       target: build
       args:
         - VITE_API_URL
@@ -55,7 +56,8 @@ services:
 
   api:
     build:
-      context: api/
+      context: .
+      dockerfile: api/Dockerfile
       target: deploy_asgi
     container_name: "api"
     expose:
