フォーマットが失敗したときにエラーにしつつフォーマットする

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -4,12 +4,14 @@
 #   https://github.com/evilmartians/lefthook/blob/master/docs/configuration.md
 #
 
-pre-push:
+pre-commit:
   parallel: true
   commands:
-    js-format:
-      glob: "*.{js,ts,jsx,tsx}"
-      run: docker compose exec -it static-builder pnpm format
     js-lint:
       glob: "*.{js,ts,jsx,tsx}"
       run: docker compose exec -it static-builder pnpm lint
+    js-format:
+      glob: "*.{js,ts,jsx,tsx}"
+      run: >
+        docker compose exec -it static-builder pnpm format ||
+        (docker compose exec static-builder pnpm format:fix && false)
