parent 95d0cc4909312ade0461780765ea4c2ff5405044 author tkuramot <106866329+tkuramot@users.noreply.github.com> 1739291276 +0900 committer soragogo <es377233@gmail.com> 1742301460 +0900
フロントエンドのパスを整理する (#190)

* フロントエンドのパスを整理する

* パスとコンポーネントの命名を揃える

* case

pre-commit hook を導入する (#191)

* pre-push hook を導入する

* format check

* lefthook.yml を修正する

* lint も追加する

* フォーマットが失敗したときにエラーにしつつフォーマットする

* lint & format

format

resolve conflict

ごみの消去

misc: 細かい修正

misc: format

不要ファイル削除

unauthorizeのエラー解消

delete accountの実装

[rename] delete small case

[rename] resetPassword->ResetPassword deleteAccount->DeleteAccount

error handling

format

refactor

saltの固定を廃止

local対応

ユーザーの削除権限がない時400 -> 403に変更

fix: create_userのエラーハンドリング修正

fix: deleteポスト時、login_nameのエラーハンドリング追加

fix: userApiのメソッド名をキャメルに統一

fix: エラー時のリターン文修正

不要なコメントアウト　削除

fix: ユーザーの削除を論理削除に変更

--- a/static-builder/package.json
+++ b/static-builder/package.json
@@ -7,8 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "biome lint --write --verbose",
-    "format": "biome format --write --verbose",
+    "lint": "biome lint --verbose",
+    "lint:fix": "biome lint --write --verbose",
+    "format": "biome format --verbose",
+    "format:fix": "biome format --write --verbose",
     "fix": "biome check --write --verbose"
   },
   "devDependencies": {
