--- a/.env.sample.local
+++ b/.env.sample.local
@@ -6,8 +6,8 @@ DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_EMAIL=admin@example.com
 DJANGO_SUPERUSER_PASSWORD=pass
 
-VITE_API_URL=https://localhost
-VITE_WEBSOCKET_URL=wss://localhost
+VITE_API_URL=http://localhost
+VITE_WEBSOCKET_URL=ws://localhost
 
 ###############
 # RDBMS SETUP #
