--- a/reverseproxy/nginx.local.conf
+++ b/reverseproxy/nginx.local.conf
@@ -42,5 +42,13 @@ http {
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
         }
+
+        location /avatars/ {
+            root /var/www/data/;  # アバター画像の保存ディレクトリ
+            autoindex off;        # 画像ディレクトリの一覧表示を無効化
+            expires max;          # キャッシュを有効化
+            access_log off;        # アクセスログを無効化（不要なら）
+            try_files $uri /404.jpg; # 画像がない場合はデフォルト画像を返す
+        }
     }
 }
