--- a/reverseproxy/nginx.local.conf
+++ b/reverseproxy/nginx.local.conf
@@ -37,18 +37,36 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_buffering off; #リアルタイム性を重視するためbufの中止
-            proxy_ignore_client_abort on; #切断対策
+            proxy_buffering off;
+            proxy_ignore_client_abort on;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
         }
 
-        location /avatars/ {
-            root /var/www/data/;  # アバター画像の保存ディレクトリ
-            autoindex off;        # 画像ディレクトリの一覧表示を無効化
-            expires max;          # キャッシュを有効化
-            access_log off;        # アクセスログを無効化（不要なら）
-            try_files $uri /404.jpg; # 画像がない場合はデフォルト画像を返す
+        # Djangoの画像アップロードAPIにリクエストを転送
+        location /avatars/upload/ {
+            proxy_pass http://backend/api/upload-avatar/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
+
+        # `/avatars/` でアップロードされた画像を配信
+        location /avatars/ {
+            root /var/www/data/;
+            expires max;
+            access_log off;
+            try_files $uri /404.jpg;
+            dav_methods PUT DELETE MKCOL COPY MOVE; 
+        }
+        # location /upload/ {
+        #     root /var/www/data/;
+        #     client_max_body_size 100M;
+        #     dav_methods PUT DELETE MKCOL COPY MOVE;
+        #     dav_ext_methods PROPFIND OPTIONS;
+        #     create_full_put_path on;
+        #     client_body_temp_path /var/www/data/tmp;
+        # }
     }
 }
