add: elasticserch 系列

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,10 +88,28 @@ services:
       interval: 5s
       retries: 5
 
+  
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.15.2
     container_name: "elasticsearch"
+    build:
+      context: elasticsearch/
+      args:
+        ELASTIC_VERSION: ${ELASTIC_VERSION}
+    volumes:
+      - ./elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro,Z
+      - elasticsearch:/usr/share/elasticsearch/data:Z
+    ports:
+      - 9200:9200
+      # - 9300:9300
     environment:
+      node.name: elasticsearch
+      ES_JAVA_OPTS: -Xms512m -Xmx512m
+      # Bootstrap password.
+      # Used to initialize the keystore during the initial startup of
+      # Elasticsearch. Ignored on subsequent runs.
+      ELASTIC_PASSWORD: ${ELASTIC_PASSWORD:-}
+      # Use single node discovery in order to disable production mode and avoid bootstrap checks.
+      # see: https://www.elastic.co/guide/en/elasticsearch/reference/current/bootstrap-checks.html
       discovery.type: single-node
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9200"]
